#38634 fixed white space beneath the pop up.

--- a/assets/theme/common/designsystem-v2-theme/shiptech.scss
+++ b/assets/theme/common/designsystem-v2-theme/shiptech.scss
@@ -491,7 +491,7 @@
     min-width: 311px !important;
     width: fit-content;
     max-width: unset !important;
-    max-height: fit-content;
+    max-height: 412px;
     position: relative;
     top: -25px;
     border-radius: 4px;
